Switched to ProcessBuilder